<resources>
    <string name="app_name">StampCollector</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="stamps_list">My Stamps List</string>

    <!--    <string name="menu_home">Home</string>-->
    <string name="stamps_wishlist">Stamps Wishlist</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="app_collector">StampsCollector</string>
    <string name="button_save">Save note</string>

    <string name="hint_title">Stamp title</string>
    <string name="hint_description">Stamp description</string>
    <string name="hint_date">Stamp issued on</string>
    <string name="hint_color">Stamp color</string>
    <string name="hint_quantity">Stamps Quantity</string>


    <string name="action_create_stamp">Add stamp to my list</string>
    <string name="action_create_note">Add note to wishlist</string>
    <string name="action_current_user">Manage user state</string>


    <string name="current_user_text_activity">Your are logged in as:</string>

    <string name="send_email_collector">Send Email</string>

    <string name="title_activity_collector">Top 10 Stamps Collectors</string>
    <string name="title_activity_note">Whislist Note</string>
    <string name="title_activity_register">RegisterActivity</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit your profile</string>
    <string name="edit_name">Edit your name</string>
    <string name="edit_email">Edit your email</string>
    <string name="edit_number">Edit your phone number</string>
    <string name="save_changes">Save Changes</string>
    <string name="big_text_login">Login</string>
    <string name="big_text_register">Register</string>
    <string name="name_text">Name</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="dont_have_acc">Don\'t have an account</string>
    <string name="then_register">Then Register</string>
    <string name="then_login">Then Login</string>
    <string name="fav_fragment">Favorite Fragment</string>
    <string name="inbox_fragment">Inbox Fragment</string>
    <string name="trips_fragment">Trips Fragment</string>
    <string name="help_user">What can we help you with user?</string>
    <string name="stays_text">Stays</string>
    <string name="exploration_text">Exploration</string>
    <string name="adventures_text">Adventures</string>
    <string name="experience_text">Experience</string>
    <string name="view_profile_text">View Profile</string>
    <string name="favorites_text">Favorites</string>
    <string name="currency_text">Currency</string>
    <string name="call_text">Call Us</string>
    <string name="language_text">Language(US English)</string>
    <string name="consent_text">Consent</string>
    <string name="become_host_text">Consent</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="delete_button">Delete stamp</string>
    <string name="write_to_file">Write to file</string>
    <string name="read_from_file">Read from file</string>
    <string name="onCancelledFirebase">onCancelled</string>
    <string name="FireBaseFailed">Failed to read!</string>
    <string name="FileToLoadFireBase">Failed to read CV object</string>
    <string name="usernameError">Enter a valid username</string>
    <string name="passwordError">You must provide a password</string>
    <string name="update_user">Update username</string>
    <string name="delete">Delete</string>
    <string name="action_state_user_management">Current user state</string>

</resources>
